# djocker

./: LICENSE  Makefile  README.md  README.rst  requirements-dev.txt  requirements-stylecheck.txt  requirements-test.txt  runtests.py  setup.cfg  setup.py  tox.ini  travis.yml
djocker/: config.py
djocker/dockerize/: config.py
djocker/dockerize/handlers/: base.py  compose.py  entrypoint.py  ubuntu.py
djocker/dockerize/templates/: docker-compose.j2  docker-entrypoint.j2
djocker/dockerize/templates/ubuntu/: Dockerfile.j2
djocker/dockerize/utils/: constants.py
djocker/scripts/: dockerize.py
djocker/utils/: ask.py  cli.py  colors.py  docker_index.py  file.py
tests/testapp/: models.py
