[metadata]
name = djocker
version = 0.1.0
description = Docker tools for Django
long_description = file: README.rst
keywords = anders
url = https://github.com/andersinno/djocker
maintainer = Frank Wickström
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
zip_safe = False
install_requires =
    requests
    Jinja2

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* build dist venv test_data

[flake8]
exclude = .tox,dist,venv
max-line-length = 120
max-complexity = 10
per-file-ignores =
    djocker/bin/dockerize.py: T001
    djocker/bin/manage_with_compose.py: T001
    djocker/utils/ask.py: T001
    djocker/dockerize/handlers/base.py: T001

[isort]
include_trailing_comma=True
known_first_party=djocker
known_third_party=pytest,six
line_length=80
multi_line_output=3
not_skip=__init__.py
skip=.tox,dist,venv

[pycodestyle]
line_length = 120

[coverage:run]
branch = True
source = tests,
omit =
    *migrations*
    tests/test_*

[prequ]
annotate = yes
requirements-dev =
    pycodestyle
    tox
requirements-test =
    pytest
    pytest-cov
    pytest-django
requirements-stylecheck =
    flake8
    flake8-isort
    flake8-print
    flake8-per-file-ignores
    pep8-naming
